--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OdontoPrev"
         tools:targetApi="31">
+
         <activity
-            android:name=".principalActivity"
+            android:name=".PrincipalActivity"
             android:exported="false" />
         <activity
             android:name=".cadastroActivity"
